--- a/CashManager/App.config
+++ b/CashManager/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="DB" connectionString="Data Source=(localdb)\hasiukiv;Initial Catalog=CashManager;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+		<add name="DB"  connectionString="Data Source=(localdb)\hasiukiv;Initial Catalog=CashManager;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
