update ReatFile Image transfer in mvvm to repository

--- a/CashManager/App.config
+++ b/CashManager/App.config
@@ -3,4 +3,7 @@
 	<connectionStrings>
 		<add name="DB"  connectionString="Data Source=(localdb)\hasiukiv;Initial Catalog=CashManager;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+	<!--<colorsForCategory>
+		<add name="Blue" />
+	</colorsForCategory>-->
 </configuration>
