Create serializer and read& Wirte File Categories

--- a/CashManager/CashManager.csproj
+++ b/CashManager/CashManager.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="BllFile\" />
+    <Folder Include="Files\" />
     <Folder Include="ProgramImages\" />
   </ItemGroup>
 
